fix: vote 가능 식당 팩토리 메소드 추가, patch로 변경